# base

./: .clang-format  .clang-format copy  .gitignore  .gitmodules  CMakeLists.txt  README.md
base/: CMakeLists.txt  base_export.h  base_path.cc  base_path.h  basic.cc  basic.h  buffer.h  command_line.cc  command_line.h  environment.cc  environment.h  file_version_info.h  file_version_info_win.cc  file_version_info_win.h  macros.h  type.h  version.cc  version.h
base/Net/: Http.h  WinInetHelper.h  w.cc  w.h
base/business/: validate.cc  validate.h
base/checksum/: crc.cc  crc.h  md5.cc  md5.h  md5_unittest.cc
base/compress/: gzip.cc  gzip.h
base/encode/: base64.cc  base64.h  base64_unittest.cc  hex.cc  hex.h
base/encrypt/: base64.cc  base64.h  md5.cc  md5.h  sha1.h  string_obfuscator.hpp
base/files/: fIle_path_win.h  file.cc  file.h  file_path.cc  file_path.h  file_path_win.cc  file_util.cc  file_util.h  file_util_win.cc  path_service.cc  path_service.h
base/log/: logging.cc  logging.h  logging_util.cc  logging_util.h
base/process/: todo.MD
base/serialization/: ptree.hpp  ptree_fwd.hpp  ptree_serialization.hpp
base/serialization/detail/: ptree_utils.hpp
base/serialization/ini/: ini.h
base/strings/: basic_string.h  latin1.cc  latin1.h  string_conversion.cc  string_conversion.h  string_encode.hpp  string_split.cc  string_split.h  string_util.h  string_utils.h  utf_string_conversion.cc  utf_string_conversion.h
base/template/: define.hpp  function.hpp
base/test/: test.cc  test.h  unittest.cc  unittest.h
base/time/: time.cc  time.h  time_util.cc  time_util.h
base/util/: benchmark_function.h  dynamic_function_win.h  font_util.h  touch_pe_time_function.h
base/win/: font_util.cpp  interesting_function.hpp  nt_function_util.h  nuclear.hpp  printer.dlg  printer_util.cc  printer_util.h  registry.cc  registry.h  resource_util.cc  resource_util.h  scoped_co_mem.h  scoped_handle.cc  scoped_handle.h  security_util.cc  security_util.h  shortcut_util.cc  shortcut_util.h  sysinfo.cc  sysinfo.h  wincrypt_helper.h  windows_util.cc  windows_util.h  windows_version.cc  windows_version.h
cmake/: msvc.cmake  msvcpch.cmake  windows.cmake
config/: compiler_specific.h  config.h.in  cppstandard.h
demo/: CMakeLists.txt
demo/D2D/: CMakeLists.txt  ComPtr.h  pch.h
demo/D2D/window/: DesktopWindow.cc  DesktopWindow.h  DeviceResources.h  FontFileStream.cpp  FontLoader.h
demo/PEStringScanner/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  main.cc
test/base/: command_line_test.cc  environment_test.cc  file_version_info_test.cc  path_service_test.cc  test.cc  version_test.cc
test/base/business/: validate_test.cc
test/base/encode/: hex_test.cc
test/base/encrypt/: base64_test.cc  md5_test.cc
test/base/strings/: string_spilt_test.cc
test/base/win/: font_util_test.cc  scoped_handle_test.cc  security_util_test.cc  sysinfo_test.cc  windows_util.cc  windows_verison_test.cc
test/strings/: string_spilt_test.cc  string_util_test.cc
tool/js/: CalculatorFolderLineNumber.js
ui/: CMakeLists.txt
ui/console/: CMakeLists.txt  console.cc  console.h
ui/gui/: CMakeLists.txt  Draft.MD  precompile_header.h  type.h
ui/gui/base/: BaseWindow.h  Color.h  Control.h  IGuiElement.h  INativeWindow.h  IRenderer.h
ui/gui/core/: gui_abstract.h  gui_application.h  gui_control.h  gui_event.h  gui_type.h  gui_window.cc  gui_window.h
ui/gui/graphics/: gui_element.h
ui/gui/host/: graphic_host.cc  graphic_host.h
ui/gui/service/: window_screen_service.cc  window_screen_service.h
ui/gui/util/: string_util.h
ui/resource/: resource.cc  resource.h
ui/windows_controls/: FileDialog.cc  FileDialog.h
